plugins {
    id 'fabric-loom' version '1.9-SNAPSHOT' apply(false)
    id 'java'
}

version = project.minecraft_version + "-" + project.client_mod_version
group = project.maven_group

repositories {
}

dependencies {
}

subprojects {

    apply plugin: "fabric-loom"
    repositories {
    }
    dependencies {
        minecraft "com.mojang:minecraft:${project.minecraft_version}"
        mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
        modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

        // Fabric API. This is technically optional, but you probably want it anyway.
        modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
    }

    tasks.withType(JavaCompile).configureEach {
        it.options.encoding = "UTF-8"
        it.options.release.set(21)
    }

    java {
        def javaVersion = JavaVersion.VERSION_21
        if (JavaVersion.current() < javaVersion) {
            toolchain.languageVersion = JavaLanguageVersion.of(21)
        }
    }
}

tasks.register('copyLibs', Copy).configure {
    subprojects.forEach { p ->
        from p.layout.buildDirectory.file("libs")
        into "$rootDir/build/libs"
        include 'NinjaUtils*.jar'
    }

}

gradle.buildFinished {
    copyLibs
}